задание №1 работа с элементами массива

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
   <script>
+//Задание  #1 Работа с элементами массива 
+let cars = []
+  for (i=0; i<3;i++) {
+    cars.push('kia rio');
+  }
+console.log(cars);
 
 
 
