--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 <body>
   <script>
 //Задание  #1 Работа с элементами массива 
-let cars = []
-  for (i=0; i<3;i++) {
-    cars.push('kia rio');
-  }
-console.log(cars);
+// let cars = []
+//   for (i=0; i<3;i++) {
+//     cars.push('kia rio');
+//   }
+// console.log(cars);
+
+//Задание №2-1 Методы
+// let arr = ['Методы'];
+// let addToarray = (arg) => {
+//   arr.push(arg);
+//   return arr.length;
+// };
+// console.log (addToarray('обработки массива'));
+
 
 
 
