--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 // console.log(cars);
 
 //Задание №2-1 Методы
-// let arr = ['Методы'];
-// let addToarray = (arg) => {
-//   arr.push(arg);
-//   return arr.length;
-// };
-// console.log (addToarray('обработки массива'));
+let arr = ['Методы'];
+let addToarray = (arg) => {
+  arr.push(arg);
+  return arr.length;
+};
+console.log (addToarray('обработки массива'));
 
 
 
