--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
 // console.log (addToarray('обработки массива'));
 
 //Задание №2-2 Методы
-let styles = ['Джаз','Блюз']; //п1
-styles.push('Рок-н-ролл');    //п2
-//console.log(styles);
-let i=Math.floor(styles.length/2);
-styles[i] = 'Классика';
-//console.log(i);
-//console.log(styles);
-console.log(styles.shift());  //п4
-//console.log(styles);
-styles.unshift('Рэп','Рэгги');//п5
-//console.log(styles);
+// let styles = ['Джаз','Блюз']; //п1
+// styles.push('Рок-н-ролл');    //п2
+// //console.log(styles);
+// let i=Math.floor(styles.length/2);
+// styles[i] = 'Классика';
+// //console.log(i);
+// //console.log(styles);
+// console.log(styles.shift());  //п4
+// //console.log(styles);
+// styles.unshift('Рэп','Рэгги');//п5
+// //console.log(styles);
 
-
-
+//Задание №3_1 
+let animals = ['monkey','donkey','junkie','swankie',];
+animals.forEach((item, index) => {
+    console.log(`Это [`+ item + `] его порядковый номер = ` + `${ index+1 }`);
+} );
   </script>
 </body>
 </html>
