--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
 // styles.unshift('Рэп','Рэгги');//п5
 // //console.log(styles);
 
-//Задание №3_1 
-let animals = ['monkey','donkey','junkie','swankie',];
-animals.forEach((item, index) => {
-    console.log(`Это [`+ item + `] его порядковый номер = ` + `${ index+1 }`);
-} );
+//Задание №3_1 перечисление животных и их порядковых номеров
+// let animals = ['monkey','donkey','junkie','swankie',];
+// animals.forEach((item, index) => {
+//     console.log(`Это [`+ item + `] его порядковый номер = ` + `${ index+1 }`);
+// } );
+// Задание 3_2 отбор чётных чисел из массива
+
+let numbers = [1,2,3,4,5,6,7,8,9,10,11,12]
+  numbers.forEach((param1)=>{
+  if(param1 % 2 === 0) console.log(param1);
+} ) 
+
   </script>
 </body>
 </html>
